# platform_packages_modules_Bluetooth

./: .editorconfig  .gitignore  Android.bp  AndroidGTestForce32Template.xml  AndroidGtestNotShardableTemplate.xml  AndroidTestTemplate.xml  BUILD.gn  Cargo.toml  HACKING  OWNERS  OWNERS_automotive  OWNERS_chromeos  OWNERS_hearingaid  OWNERS_leaudio  PREUPLOAD.cfg  README.md  TEST_MAPPING  bootstrap.py  build.py
floss/hcidoc/: Cargo.toml
floss/hcidoc/packets/: Cargo.toml  build.rs  l2cap_packets.pdl  lib.rs
floss/hcidoc/src/: engine.rs  main.rs  parser.rs
system/bta/: Android.bp  BUILD.gn
system/bta/ag/: bta_ag_act.cc  bta_ag_api.cc  bta_ag_at.h  bta_ag_cfg.cc  bta_ag_cmd.cc  bta_ag_int.h  bta_ag_main.cc  bta_ag_rfc.cc  bta_ag_sco.cc  bta_ag_sdp.cc  bta_ag_swb_aptx.cc
system/bta/ar/: bta_ar.cc  bta_ar_int.h
system/bta/av/: bta_av_aact.cc  bta_av_act.cc  bta_av_api.cc  bta_av_cfg.cc  bta_av_int.h  bta_av_main.cc  bta_av_ssm.cc
system/bta/csis/: csis_client.cc  csis_client_test.cc  csis_types.h
system/bta/dm/: bta_dm_act.cc  bta_dm_act.h  bta_dm_api.cc  bta_dm_cfg.cc  bta_dm_ci.cc  bta_dm_disc.cc  bta_dm_disc.h  bta_dm_disc_int.h  bta_dm_gatt_client.cc  bta_dm_gatt_client.h  bta_dm_int.h  bta_dm_main.cc  bta_dm_pm.cc  bta_dm_sec.cc  bta_dm_sec.h  bta_dm_sec_api.cc  bta_dm_sec_int.h
system/bta/gatt/: bta_gattc_act.cc  bta_gattc_api.cc  bta_gattc_cache.cc  bta_gattc_db_storage.cc  bta_gattc_int.h  bta_gattc_main.cc  bta_gattc_queue.cc  bta_gattc_utils.cc  bta_gatts_act.cc  bta_gatts_api.cc  bta_gatts_int.h  bta_gatts_main.cc  bta_gatts_queue.cc  database.cc  database.h  database_builder.h
system/bta/groups/: groups.cc  groups_test.cc
system/bta/has/: has_client.cc  has_client_test.cc  has_ctp.cc  has_ctp.h  has_preset.cc  has_preset.h  has_types.h
system/bta/hd/: bta_hd_act.cc  bta_hd_api.cc  bta_hd_int.h  bta_hd_main.cc
system/bta/hearing_aid/: OWNERS  hearing_aid.cc  hearing_aid_audio_source.cc
system/bta/hf_client/: bta_hf_client_act.cc  bta_hf_client_api.cc  bta_hf_client_at.cc  bta_hf_client_int.h  bta_hf_client_main.cc  bta_hf_client_rfc.cc  bta_hf_client_sco.cc  bta_hf_client_sdp.cc
system/bta/hfp/: bta_hfp_api.cc
system/bta/hh/: bta_hh_act.cc  bta_hh_api.cc  bta_hh_cfg.cc  bta_hh_int.h  bta_hh_le.cc  bta_hh_main.cc  bta_hh_utils.cc
system/bta/include/: OWNERS  bta_ag_api.h  bta_ag_swb_aptx.h  bta_api.h  bta_api_data_types.h  bta_ar_api.h  bta_av_api.h  bta_av_ci.h  bta_csis_api.h  bta_dm_acl.h  bta_dm_ci.h  bta_dm_co.h  bta_gatt_api.h  bta_gatt_queue.h  bta_gatts_co.h  bta_groups.h  bta_has_api.h  bta_hd_api.h  bta_hearing_aid_api.h  bta_hf_client_api.h  bta_hfp_api.h  bta_hh_api.h  bta_hh_co.h  bta_jv_api.h  bta_jv_co.h  bta_le_audio_api.h  bta_le_audio_broadcaster_api.h  bta_pan_api.h  bta_pan_ci.h  bta_pan_co.h  bta_rfcomm_scn.h  bta_sdp_api.h  bta_sec_api.h  bta_vc_api.h  utl.h
system/bta/jv/: bta_jv_act.cc  bta_jv_api.cc  bta_jv_int.h
system/bta/le_audio/: audio_set_configurations.fbs  audio_set_configurations.json  audio_set_scenarios.json  client.cc  client_audio.cc  client_audio.h  client_audio_test.cc  client_linux.cc  client_parser.cc  client_parser.h  client_parser_test.cc  codec_interface.cc  codec_interface.h  codec_manager.cc  codec_manager.h  codec_manager_test.cc  content_control_id_keeper.cc  content_control_id_keeper.h  content_control_id_keeper_test.cc  device_groups.cc  device_groups.h  devices.cc  devices.h  devices_test.cc  hal_verifier.cc  hal_verifier_linux.cc  le_audio_client_test.cc  le_audio_health_status.cc  le_audio_health_status.h  le_audio_health_status_test.cc  le_audio_log_history.cc  le_audio_log_history.h  le_audio_set_configuration_provider.cc  le_audio_set_configuration_provider.h  le_audio_set_configuration_provider_json.cc  le_audio_types.cc  le_audio_types.h  le_audio_types_test.cc  le_audio_utils.cc  le_audio_utils.h  (+20 more)
system/bta/pan/: bta_pan_act.cc  bta_pan_api.cc  bta_pan_ci.cc  bta_pan_int.h  bta_pan_main.cc
system/bta/rfcomm/: bta_rfcomm_scn.cc
system/bta/sdp/: bta_sdp_act.cc  bta_sdp_api.cc  bta_sdp_int.h
system/bta/sys/: bta_sys.h  bta_sys_conn.cc  bta_sys_int.h  bta_sys_main.cc
system/bta/test/: bta_ag_sco_test.cc  bta_ag_test.cc  bta_api_test.cc  bta_av_test.cc  bta_base_test.h  bta_dip_test.cc  bta_disc_test.cc  bta_dm_cust_uuid_test.cc  bta_dm_test.cc  bta_gatt_client_test.cc  bta_gatt_test.cc  bta_hf_client_add_record_test.cc  bta_hf_client_security_test.cc  bta_hf_client_test.cc  bta_hh_test.cc  bta_pan_test.cc  bta_rfcomm_scn_test.cc  bta_sdp_test.cc  bta_sec_test.cc
system/bta/vc/: device.cc  devices.h  devices_test.cc  types.h  vc.cc  vc_test.cc
system/embdrv/lc3/: Android.bp  BUILD.gn
system/gd/: .clang-format  Android.bp  Android.mk  AndroidTestTemplate.xml  BUILD.gn  dumpsys_data.fbs  fuzz_test.cc  module.cc  module.h  module_dumper.cc  module_dumper.h  module_dumper_flatbuffer.cc  module_dumper_flatbuffer.h  module_mainloop.h  module_mainloop_unittest.cc  module_mainloop_unittest.h  module_unittest.cc  setup.py  stack_manager.cc  stack_manager.h  stack_manager_unittest.cc
system/gd/att/: att_module.cc  att_module.h
system/gd/btaa/: activity_attribution.h  attribution_processor.h
system/gd/cert/: all_cert_testcases  bluetooth_packets_python3_setup.py  cert_self_test.py  cert_self_test_lib.py  devices_config.json  event_stream.py  gd_base_test.py  gd_base_test_facade_only.py  gd_base_test_lib.py  gd_device.py  gd_device_lib.py  matchers.py  metadata.py  os_utils.py  pts_base_test.py  py_hal.py  py_le_acl_manager.py  python3.8-gd  real_device_testcases  run  run_cert.sh  run_cert_facade_only.sh  run_device_cert.sh  run_pts_l2cap.sh  run_topshim  set_up_and_run_device_cert.sh  set_up_virtualenv.sh  truth.py
system/gd/common/: Android.bp  BUILD.gn  audit_log.cc  bind.h  byte_array_test.cc  callback.h  circular_buffer_test.cc  contextual_callback.h  i_postable_context.h  init_flags.cc  init_flags.fbs  init_flags.h  (+9 more)
system/pdl/: Android.bp  BUILD.gn
system/rust/: Android.bp  BUILD.gn  Cargo.toml  build.rs
tools/rootcanal/: Android.bp  CMakeLists.txt  TEST_MAPPING
(+3832 files in other folders)
