[package]
name = "hcidoc"
version = "0.1.0"
edition = "2021"

[dependencies]
bt_packets = { path = "../../system/gd/rust/packets" }
clap = "4.0"
chrono = "0.4"
num-derive = "0.3"
num-traits = "0.2"
tokio = { version = "1.0", features = ['bytes', 'fs', 'io-util', 'libc', 'macros', 'memchr', 'mio', 'net', 'num_cpus', 'rt', 'rt-multi-thread', 'sync', 'time', 'tokio-macros'] }
