#
#  Copyright 2023 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

import("//common-mk/cxxbridge.gni")

cxxbridge_libheader("cxxlibheader") {
  deps = []
}

static_library("core_rs") {
  sources = [
    "src/core/ffi/module.cc",
    "src/gatt/ffi/gatt_shim.cc",
  ]

  include_dirs = [
    "//bt/system",
    "//bt/system/rust",
    "//bt/system/include",
    "//bt/system/stack/include",
    "//bt/system/internal_include",
    "//bt/system/gd",
    "//bt/system/types",
  ]

  configs += [ "//bt/system:target_defaults" ]

  deps = [
    ":cxxlibheader",
    "//bt/system/gd/rust/shim:init_flags_bridge_header",
    "//bt/system/gd:BluetoothGeneratedPackets_h",
  ]

  defines = [
    "TARGET_FLOSS",
  ]
}
