#
#  Copyright 2022 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[package]
name = "bluetooth_core"
version = "0.0.1"
edition = "2021"

[dependencies]
bt_common = { path = "../gd/rust/common", default-features = false }

# External dependencies
# Note: source-of-truth is Android.bp, these are mirrored solely for IDE convenience
anyhow = "1.0"
bitflags = "1.3.2"
log = "*"
cxx = "*"
android_logger = "*"
jni = "*"
paste = "*"
async-trait = "*"
pdl-runtime = "0.2.2"
tokio-test = "0.4.2"
tokio = { version = "1.23.0", features = ["macros"] }
scopeguard = "1.1.0"

[build-dependencies]
pdl-compiler = "0.2.2"

[lib]
crate-type = ["rlib"]

[workspace]
