#
#  Copyright 2023 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

# This crate is a temporary package until we can parse l2cap_packets.pdl file
# properly. Until then, we fork the file to this crate so we get a workable
# l2cap_packets.rs to be used to speed up the development of hcidoc.
# The content of this crate mainly copies bt_packets, which is located in
# system/gd/rust/packets.

[package]
name = "hcidoc_packets"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[dependencies]

bindgen = "0.64"
bytes = "1.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0"
walkdir = "2.2"

[lib]
path = "lib.rs"
crate-types = ["rlib"]
