#
#  Copyright 2023 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

static_library("liblc3") {
  cflags = [
    "-O3",
    "-ffast-math",
    "-Wmissing-braces",
    "-Wno-#warnings",
    "-Wuninitialized",
    "-Wno-self-assign",
    "-Wno-implicit-fallthrough",
  ]

  sources = [
    "src/attdet.c",
    "src/bits.c",
    "src/bwdet.c",
    "src/energy.c",
    "src/lc3.c",
    "src/ltpf.c",
    "src/mdct.c",
    "src/plc.c",
    "src/sns.c",
    "src/spec.c",
    "src/tables.c",
    "src/tns.c",
  ]

  include_dirs = [
    "include",
  ]
}
