#
#  Copyright 2021 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

source_set("BluetoothHciSources") {
  sources = [
    "acl_manager.cc",
    "acl_manager/acl_connection.cc",
    "acl_manager/acl_scheduler.cc",
    "acl_manager/acl_fragmenter.cc",
    "acl_manager/classic_acl_connection.cc",
    "acl_manager/le_acl_connection.cc",
    "acl_manager/round_robin_scheduler.cc",
    "address.cc",
    "class_of_device.cc",
    "controller.cc",
    "distance_measurement_manager.cc",
    "hci_layer.cc",
    "hci_metrics_logging.cc",
    "le_address_manager.cc",
    "le_advertising_manager.cc",
    "le_scanning_manager.cc",
    "le_scanning_reassembler.cc",
    "link_key.cc",
    "msft.cc",
    "remote_name_request.cc",
    "uuid.cc",
    "vendor_specific_event_manager.cc",
  ]

  include_dirs = [ "//bt/system/gd" ]

  deps = [
    "//bt/system/gd:gd_default_deps",
  ]

  configs += [ "//bt/system:target_defaults" ]
}

if (use.test) {
  executable("hci_tests") {
    sources = [
      "hci_packets_test.cc",
    ]

    include_dirs = [ "//bt/system/gd" ]

    deps = [
      "//bt/system/main:bluetooth-static",
    ]

    configs += [
      "//bt/system:target_defaults",
      "//bt/system:external_gtest_main",
    ]

    libs = [
      "pthread",
      "rt",
      "dl",
    ]

    ldflags = [
      "-lpthread"
    ]
  }
}
